package app.dto;

/** Request. */
public interface Request {}
