package app.server.network;

import app.common.dto.AuctionPaidNoticeResponse;
import app.common.dto.AuctionSummariesResponse;
import app.common.dto.WalletUpdateResponse;
import app.common.enums.AuctionStatus;
import app.common.enums.ResponseType;
import app.common.enums.UserRole;
import app.common.exception.DatabaseException;
import app.common.exception.ServiceException;
import app.common.models.Account;
import app.common.models.User;
import app.common.models.Wallet;
import app.common.protocol.PacketRes;
import app.server.dao.*;
import app.server.dao.impl.*;
import app.server.database.TransactionManager;
import app.server.service.*;
import app.server.service.result.AuctionCompletion;
import java.io.IOException;
import java.net.InetSocketAddress;
import java.net.ServerSocket;
import java.net.Socket;
import java.net.SocketException;
import java.time.Clock;
import java.util.LinkedHashSet;
import java.util.List;
import java.util.Map;
import java.util.Set;
import java.util.concurrent.*;
import java.util.function.Predicate;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

/** Server. */
public class Server {
  private static final Logger logger = LoggerFactory.getLogger(Server.class);
  public static final int PORT = 5000;
  private static volatile Server instance;
  private ServerSocket serverSocket;
  private volatile boolean running = true;
  private static final Map<Integer, ClientHandler> authenticatedClients = new ConcurrentHashMap<>();
  private static final ExecutorService clientPool = Executors.newCachedThreadPool();
  private static final ExecutorService broadcastPool = Executors.newCachedThreadPool();
  private final ScheduledExecutorService auctionMaintenancePool =
      Executors.newSingleThreadScheduledExecutor();
  private AuctionService auctionService;
  private AuctionQueryService auctionQueryService;
  private BidService bidService;
  private AutoBidService autoBidService;
  private UserService userService;
  private ItemService itemService;
  private ImageStorageService imageStorageService;

  private Server() {
    try {
      serverSocket = new ServerSocket();
      serverSocket.setReuseAddress(true);
      serverSocket.bind(new InetSocketAddress(PORT));
      logger.info("[SERVER] Running on port {}", PORT);
      initService();
    } catch (IOException e) {
      logger.error("[SERVER] Failed to start on port {}", PORT, e);
      throw new RuntimeException("Cannot start server", e);
    }
  }

  /** getInstance. */
  public static synchronized Server getInstance() {
    if (instance == null) {
      instance = new Server();
    }
    return instance;
  }

  private void initService() {
    logger.info("[SERVER] Initializing database...");
    UserDAO userDAO = new MySqlUserDAO();
    ItemDAO itemDAO = new MySqlItemDAO();
    AuctionDAO auctionDAO = new MySqlAuctionDAO();
    BidDAO bidDAO = new MySqlBidDAO();
    AutoBidDAO autoBidDAO = new MySqlAutoBidDAO();
    TransactionManager transactionManager = new TransactionManager();
    BidValidator bidValidator = new BidValidator();
    Clock clock = Clock.systemDefaultZone();
    AntiSnipeService antiSnipeService = new AntiSnipeService(clock);
    AuctionSettlementService settlementService =
        new AuctionSettlementService(bidDAO, userDAO, autoBidDAO);
    userService = new UserService(userDAO, transactionManager);
    itemService = new ItemService(itemDAO, auctionDAO, transactionManager);
    autoBidService =
        new AutoBidService(
            autoBidDAO, auctionDAO, bidDAO, itemDAO, userDAO, transactionManager, bidValidator);
    bidService =
        new BidService(
            bidDAO,
            auctionDAO,
            itemDAO,
            userDAO,
            transactionManager,
            bidValidator,
            antiSnipeService,
            autoBidService);
    auctionService =
        new AuctionService(
            auctionDAO, bidDAO, itemDAO, userDAO, transactionManager, settlementService, clock);
    auctionQueryService = new AuctionQueryService(auctionDAO, bidDAO, itemDAO, userDAO);
    imageStorageService = new ImageStorageService();
    AuctionScheduler.getInstance().init(auctionService, auctionQueryService);
    startAuctionMaintenance();
    createAdmin();
  }

  private void startAuctionMaintenance() {
    auctionMaintenancePool.scheduleAtFixedRate(
        () -> {
          try {
            var completions = auctionService.completeExpiredAuctionCompletions();
            if (!completions.isEmpty()) {
              logger.info(
                  "[SERVER] Completed expired auctions: {}",
                  completions.stream().map(completion -> completion.auctionId()).toList());
              broadcastAuctionList(auctionQueryService);
              sendPaymentNotices(completions);
              sendWalletUpdates(completions);
            }
          } catch (Exception e) {
            logger.error("[SERVER] Auction maintenance failed", e);
          }
        },
        5,
        5,
        TimeUnit.SECONDS);
  }

  public static void broadcastAuctionList(AuctionQueryService auctionQueryService) {
    if (auctionQueryService == null) {
      return;
    }
    try {
      var response = new AuctionSummariesResponse(auctionQueryService.getAuctionPreviews());
      broadcast(PacketRes.of(ResponseType.AUCTION_SUMMARIES_UPDATED, "OK", response), -1);
    } catch (Exception e) {
      logger.error("[SERVER] Failed to broadcast auction list", e);
    }
  }

  private void sendPaymentNotices(List<AuctionCompletion> completions) {
    for (AuctionCompletion completion : completions) {
      completion
          .highestBid()
          .ifPresent(
              bid -> {
                try {
                  var auction = auctionQueryService.getAuction(completion.auctionId());
                  if (auction.getStatus() != AuctionStatus.PAID) {
                    return;
                  }
                  var amount = completion.winningAmount();
                  if (amount.signum() <= 0) {
                    return;
                  }
                  String auctionName =
                      auction.getItem() == null
                          ? "Phiên #" + completion.auctionId()
                          : auction.getItem().getName();
                  var sellerNotice =
                      new AuctionPaidNoticeResponse(
                          completion.auctionId(), auctionName, amount, "SELLER");
                  var winnerNotice =
                      new AuctionPaidNoticeResponse(
                          completion.auctionId(), auctionName, amount, "WINNER");
                  sendToUser(
                      auction.getSellerId(),
                      PacketRes.of(ResponseType.AUCTION_PAID_NOTICE, "OK", sellerNotice));
                  sendToUser(
                      bid.getBidderId(),
                      PacketRes.of(ResponseType.AUCTION_PAID_NOTICE, "OK", winnerNotice));
                } catch (Exception e) {
                  logger.warn(
                      "[SERVER] Failed to send payment notice for auction {}",
                      completion.auctionId(),
                      e);
                }
              });
    }
  }

  private void sendWalletUpdates(List<AuctionCompletion> completions) {
    Set<Integer> userIds = new LinkedHashSet<>();
    for (AuctionCompletion completion : completions) {
      userIds.addAll(completion.settledUserIds());
    }
    for (Integer userId : userIds) {
      sendWalletUpdate(userId);
    }
  }

  private void sendWalletUpdate(int userId) {
    try {
      var user = userService.getById(userId);
      sendPacketToUser(
          userId,
          PacketRes.of(
              ResponseType.WALLET_UPDATED,
              "OK",
              new WalletUpdateResponse(app.common.mapper.ModelMapper.toUserDto(user))));
    } catch (Exception e) {
      logger.warn("[SERVER] Failed to send wallet update to user {}", userId, e);
    }
  }

  /** start. */
  public void start() {
    logger.info("[SERVER] Waiting for clients...");
    try {
      while (running && !serverSocket.isClosed() && !Thread.currentThread().isInterrupted()) {
        try {
          Socket socket = serverSocket.accept();
          if (!running) {
            socket.close();
            break;
          }
          socket.setTcpNoDelay(true);
          socket.setKeepAlive(true);
          socket.setSoTimeout(0);
          logger.info("[SERVER] Client connected: {}", socket.getRemoteSocketAddress());
          ClientHandler clientHandler =
              new ClientHandler(
                  socket,
                  auctionService,
                  auctionQueryService,
                  bidService,
                  autoBidService,
                  userService,
                  itemService,
                  imageStorageService);
          clientPool.execute(clientHandler);
        } catch (SocketException e) {
          if (serverSocket.isClosed()) {
            logger.info("[SERVER] Server socket closed");
            break;
          }
          logger.error("[SERVER] Socket error", e);
        }
      }
    } catch (IOException e) {
      if (running) {
        logger.error("[SERVER] Error accepting client", e);
      }
    } catch (ServiceException e) {
      logger.error("[SERVER] Service error", e);
    } catch (DatabaseException e) {
      logger.error("[SERVER] Database error", e);
    }
  }

  /** shutdown. */
  public void shutdown() {
    logger.info("[SERVER] Shutting down...");
    running = false;
    AuctionScheduler.getInstance().shutdown();
    try {
      if (serverSocket != null && !serverSocket.isClosed()) {
        serverSocket.close();
      }
      authenticatedClients.values().stream().toList().forEach(ClientHandler::close);
      authenticatedClients.clear();
      shutdownExecutor(clientPool, "clientPool");
      shutdownExecutor(broadcastPool, "broadcastPool");
      shutdownExecutor(auctionMaintenancePool, "auctionMaintenancePool");
      logger.info("[SERVER] Shutdown complete");
      instance = null;
    } catch (IOException e) {
      logger.error("[SERVER] Shutdown IO error", e);
    }
  }

  private void shutdownExecutor(ExecutorService executor, String name) {
    executor.shutdown();
    try {
      if (!executor.awaitTermination(5, TimeUnit.SECONDS)) {
        logger.warn("[SERVER] Force shutdown {}", name);
        executor.shutdownNow();
      }
    } catch (InterruptedException e) {
      Thread.currentThread().interrupt();
      logger.error("[SERVER] Shutdown interrupted: {}", name, e);
      executor.shutdownNow();
    }
  }

  /** registerClient. */
  public static void registerClient(int userId, ClientHandler handler) {
    ClientHandler old = authenticatedClients.put(userId, handler);
    if (old != null && old != handler) {
      logger.info("[SERVER] Replacing old auction for user {}", userId);
      authenticatedClients.remove(userId, old);
      old.close();
    }
  }

  /** removeClient. */
  public static void removeClient(int userId, ClientHandler handler) {
    authenticatedClients.remove(userId, handler);
  }

  /** sendToUser. */
  public static void sendToUser(int userId, PacketRes packet) {
    if (packet == null) {
      return;
    }
    ClientHandler handler = authenticatedClients.get(userId);
    if (handler == null || !handler.isAuthenticated()) {
      return;
    }
    broadcastPool.execute(
        () -> {
          try {
            handler.sendPacket(packet);
          } catch (Exception e) {
            logger.warn("[SERVER] Send failed to user {}", userId, e);
          }
        });
  }

  /** broadcast. */
  public static void broadcast(PacketRes packet, int excludeUser) {
    sendToClients(packet, user -> user.getId() != excludeUser, "Broadcast failed to user {}");
  }

  /** sendPacketToUser. */
  public static void sendPacketToUser(int userId, PacketRes packet) {
    ClientHandler handler = authenticatedClients.get(userId);
    if (packet == null || !isReady(handler)) {
      return;
    }
    asyncSend(handler, packet, "Packet send failed to user {}", userId);
  }

  public static void updateOnlineUserStatus(int userId, boolean active) {
    ClientHandler handler = authenticatedClients.get(userId);
    if (!isReady(handler)) {
      return;
    }
    handler.getUser().setStatus(active);
  }

  /** broadcastToAuctionViewers. */
  public static void broadcastToAuctionViewers(int auctionId, PacketRes packet, int excludeUser) {
    if (auctionId <= 0) {
      return;
    }
    sendToClients(
        packet,
        user -> user.getId() != excludeUser,
        handler -> {
          Integer viewingAuctionId = handler.getSession().getViewingAuctionId();
          return viewingAuctionId != null && viewingAuctionId == auctionId;
        },
        "Auction viewer broadcast failed to user {} for auction {}",
        auctionId);
  }

  private static void sendToClients(
      PacketRes packet, Predicate<app.common.models.User> userFilter, String errorLog) {
    sendToClients(packet, userFilter, handler -> true, errorLog);
  }

  private static void sendToClients(
      PacketRes packet,
      Predicate<app.common.models.User> userFilter,
      Predicate<ClientHandler> handlerFilter,
      String errorLog,
      Object... logArgs) {
    if (packet == null) {
      return;
    }
    authenticatedClients
        .values()
        .forEach(
            handler -> {
              if (!isReady(handler) || !handlerFilter.test(handler)) {
                return;
              }
              var user = handler.getUser();
              if (!userFilter.test(user)) {
                return;
              }
              Object[] args = new Object[logArgs.length + 1];
              args[0] = user.getId();
              System.arraycopy(logArgs, 0, args, 1, logArgs.length);
              asyncSend(handler, packet, errorLog, args);
            });
  }

  private static boolean isReady(ClientHandler handler) {
    return handler != null && handler.isAuthenticated() && handler.getUser() != null;
  }

  private static void asyncSend(
      ClientHandler handler, PacketRes packet, String errorLog, Object... args) {
    broadcastPool.execute(
        () -> {
          try {
            handler.sendPacket(packet);
          } catch (Exception e) {
            logger.warn("[SERVER] " + errorLog, appendThrowable(args, e));
          }
        });
  }

  private static Object[] appendThrowable(Object[] args, Throwable throwable) {
    Object[] finalArgs = new Object[args.length + 1];
    System.arraycopy(args, 0, finalArgs, 0, args.length);
    finalArgs[args.length] = throwable;
    return finalArgs;
  }

  public static int getOnlineUserCount() {
    return authenticatedClients.size();
  }

  /** isUserOnline. */
  public static boolean isUserOnline(int userId) {
    return authenticatedClients.containsKey(userId);
  }

  public void createAdmin() {
    try {
      User admin =
          new User("ADMIN", new Account("admin123", "123123", UserRole.ADMIN), new Wallet());
      userService.register(admin);
    } catch (ServiceException e) {
      logger.warn("[SERVER] Admin account already exists");
    } catch (DatabaseException e) {
      logger.error("[SERVER] Database error during admin creation", e);
    }
  }
}
