package app.enums;

public enum Result {
  // Auth & User
  LOGIN,
  LOGOUT,
  REGISTER,
  PLACE_BID,
  CREATE_AUCTION,
  CHAT,
  ERROR,
  SUCCESS
}
