@startuml
' Compact server UML
set namespaceSeparator none
top to bottom direction
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam packageStyle rectangle
skinparam nodesep 25
skinparam ranksep 25
hide empty members

package "app.server.network" {
  class Server <<Singleton>> {
    authenticatedClients : Map<Integer, ClientHandler>
    start()
    shutdown()
    broadcast(PacketRes)
    sendPacketToUser(userId, PacketRes)
  }

  class ClientHandler {
    session : Session
    commands : Map<RequestType, Command>
    run()
    sendPacket(PacketRes)
    authorize(RequestType)
  }

  class Session {
    user : User
    authenticated : boolean
    viewingAuctionId : Integer
  }
}

package "app.server.command" {
  interface Command {
    execute(ClientHandler, PacketReq)
  }

  abstract class SafeCommand <<Template Method>> {
    execute(ClientHandler, PacketReq)
    doExecute(ClientHandler, PacketReq)
    responseType() : ResponseType
  }

  class "Request commands" as ServerCommands {
    BanUserCommand
    CancelAuctionCommand
    ChatCommand
    CreateAuctionCommand
    DepositCommand
    DisableAutoBidCommand
    FetchAuctionDetailCommand
    FetchAuctionHistoryCommand
    FetchAuctionResultCommand
    FetchAuctionSummariesCommand
    FetchAvatarCommand
    FetchItemImageCommand
    FetchSellerItemsCommand
    FetchUserListCommand
    LoginCommand
    PlaceBidCommand
    RegisterCommand
    SetAutoBidCommand
    SettleWalletCommand
    UnwatchAuctionCommand
    UpdateAuctionCommand
    UploadAvatarCommand
    UploadImageCommand
  }
}

package "app.server.service" {
  class "Services" as Services {
    AuctionService
    AuctionQueryService
    BidService
    AutoBidService
    AuctionSettlementService
    AuctionScheduler
    UserService
    ItemService
    ImageStorageService
    AntiSnipeService
    BidValidator
    OwnershipGuard
  }

  class "Result records" as ServiceResults <<records>> {
    AutoBidUpdateResult
    AuctionCompletion
    AuctionSettlementResult
  }
}

package "app.server.dao" {
  abstract class BaseDAO

  class "DAO interfaces" as DAOInterfaces <<interfaces>> {
    UserDAO
    AuctionDAO
    BidDAO
    AutoBidDAO
    ItemDAO
    ChatDAO
  }

  class "MySQL DAO implementations" as MySqlDaos {
    MySqlUserDAO
    MySqlAuctionDAO
    MySqlBidDAO
    MySqlAutoBidDAO
    MySqlItemDAO
  }
}

package "app.server.database" {
  class DatabaseConnection
  class DatabaseConfig
  class DatabaseInitializer

  class TransactionManager {
    runInTransaction(work)
    runWithoutResult(work)
  }
}

Server -[hidden]down- ClientHandler
ClientHandler -[hidden]down- Command
Command -[hidden]down- Services
Services -[hidden]down- DAOInterfaces
DAOInterfaces -[hidden]down- DatabaseConnection

Server "1" o-- "0..*" ClientHandler : manages
ClientHandler o-- Session
ClientHandler o-- Command : dispatches by RequestType
ServerCommands --|> SafeCommand
SafeCommand ..|> Command
ServerCommands ..> Services : calls
Services ..> ServiceResults : returns
Services ..> DAOInterfaces : persistence
Services ..> TransactionManager : transactions
MySqlDaos ..|> DAOInterfaces
MySqlDaos --|> BaseDAO
BaseDAO ..> DatabaseConnection
TransactionManager ..> DatabaseConnection
DatabaseInitializer ..> DatabaseConnection
Server ..> Services : initializes / broadcasts

@enduml
